Emissor e Beneficiário no cadastro de Cheques [close-4663579]

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -264,7 +264,7 @@
 	<div data-attribute="valor" class="coi-view-text" data-label="Valor:" data-required="true"/>
 	<div data-attribute="dataDeposito" class="coi-view-text" data-label="Data:" data-required="true"/>
 	<div data-attribute="observacao" class="coi-view-textarea" data-label="Observação:"/>
-	<div id="cliente"/>
+	<div id="emissor"/>
 	<div>
 		<button class="coi-action-cancel">Cancelar</button>
 	</div>
@@ -341,8 +341,8 @@
 <div data-attribute="valor" class="coi-view-text" data-label="Valor:" data-required="true"/>
 <div data-attribute="dataDeposito" class="coi-view-text" data-label="Data:" data-required="true"/>
 <div data-attribute="observacao" class="coi-view-textarea" data-label="Observação:"/>
-<div id="cliente"/>
-<div id="paciente"/>
+<div id="emissor"/>
+<div id="beneficiario"/>
 <footer>
 	<button class="coi-action-cancel">Cancelar</button>
 	<button class="coi-action-confirm">Confirmar</button>
