Inclusão de vários cheques na entrada [close-4663565]

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -250,24 +250,26 @@
 		</select>
 	<dd>
 </dl>
-<div id="cheque"/>
+<dl class="coi-form-item">
+	<dd>
+		<button class="coi-action-create">Adicionar</button>
+	</dd>
+</dl>
+<div id="cheques"/>
 	</script>
 	<script type="text/template" id="entrada_meio_pagamento_cheque_template">
-<button class="coi-action-create">Adicionar</button>
-<div class="coi-view-cheque-new">
-	<header>Novo Cheque</header>
-	<div data-attribute="numero" class="coi-view-text" data-label="Numero:" data-required="true"/>
-	<div data-attribute="conta" class="coi-view-text" data-label="Conta:" data-required="true"/>
-	<div data-attribute="agencia" class="coi-view-text" data-label="Agência:" data-required="true"/>
-	<div data-attribute="banco" class="coi-view-text" data-label="Banco:" data-required="true"/>
-	<div data-attribute="documento" class="coi-view-text" data-label="CPF/CNPJ:" data-required="true"/>
-	<div data-attribute="valor" class="coi-view-text" data-label="Valor:" data-required="true"/>
-	<div data-attribute="dataDeposito" class="coi-view-text" data-label="Data:" data-required="true"/>
-	<div data-attribute="observacao" class="coi-view-textarea" data-label="Observação:"/>
-	<div id="emissor"/>
-	<div>
-		<button class="coi-action-cancel">Cancelar</button>
-	</div>
+<header>Novo Cheque</header>
+<div data-attribute="numero" class="coi-view-text" data-label="Numero:" data-required="true"/>
+<div data-attribute="conta" class="coi-view-text" data-label="Conta:" data-required="true"/>
+<div data-attribute="agencia" class="coi-view-text" data-label="Agência:" data-required="true"/>
+<div data-attribute="banco" class="coi-view-text" data-label="Banco:" data-required="true"/>
+<div data-attribute="documento" class="coi-view-text" data-label="CPF/CNPJ:" data-required="true"/>
+<div data-attribute="valor" class="coi-view-text" data-label="Valor:" data-required="true"/>
+<div data-attribute="dataDeposito" class="coi-view-text" data-label="Data:" data-required="true"/>
+<div data-attribute="observacao" class="coi-view-textarea" data-label="Observação:"/>
+<div id="emissor"/>
+<div>
+	<button class="coi-action-remove">Remover</button>
 </div>
 	</script>
 	<script type="text/template" id="entrada_produtos_template">
