Emissão de Laudos (Densitometria) [close-4989923]

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -437,22 +437,49 @@
 		<table id="observacoes-list"/>
 	<dd>
 </dl>
-<!-- dl class="coi-form-item">
+<dl class="coi-form-item">
 	<dt>Comparação com exames anteriores:</dt>
 	<dd>
 		<select id="comparacoes">
-			<option/></option>
+			<option/>
+<option data-code="1" data-value="Não há exames anteriores neste serviço para comparação">
+	1 - Não há exames anteriores...</option>
+<option data-code="2" data-value="Comparação com densitometria óssea de {}:
+Coluna lombar (L1-L4) - é utilizado a DMO
+Fêmur total - é utilizado a DMO
+* Não compara-se radio 33% ou colo de fêmur">
+	2 - Comparação com densitometria óssea de...</option>
+<option data-code="3" data-value="Massa óssea mantida na coluna lombar">
+	A - Massa óssea mantida na coluna lombar</option>
+<option data-code="4" data-value="Massa óssea mantida no fêmur total">
+	B - Massa óssea mantida no fêmur total</option>
+<option data-code="5" data-value="Perda de densidade óssea de {} ± 2% na coluna lombar">
+	C - Perda de densidade óssea ± 2%</option>
+<option data-code="6" data-value="Perda de densidade óssea de {} ± 3% no fêmur total">
+	D - Perda de densidade óssea ± 3%</option>
+<option data-code="7" data-value="Ganho de densidade óssea de {} ± 2% na coluna lombar">
+	E - Ganho de densidade óssea ± 2%</option>
+<option data-code="8" data-value="Ganho de densidade óssea de {} ± 3% no fêmur total">
+	F - Ganho de densidade óssea ± 3%</option>
+<option data-code="9" data-value="Sugerimos não utilizar a coluna lombar para diagnóstico, classificação de risco de fraturas ou monitorização terapêutica, devido à presença de alterações vertebrais">
+	3 - Sugerimos não utilizar a coluna lombar...</option>
+<option data-code="10" data-value="Sugerimos não utilizar o fêmur proximal para diagnóstico, classificação de risco de fraturas ou monitorização terapêutica, devido à presença alterações estruturais"> 
+	4 - Sugerimos não utilizar o fêmur...</option> 
+<option data-code="11" data-value="Sugerimos utilizar o segmento {} para diagnóstico, classificação de risco de fraturas e monitorização terapêutica, devido à presença de alterações nas outras vértebras analisadas">
+	5 - Sugerimos utilizar o segmento...</option>
+<option data-code="12" data-value="À critério clínico, sugere-se controle com densitometria em {} meses">
+	6 - À critério clínico, sugere-se controle...</otion>
 		</select>
 		<button id="adicionar-comparacao" class="coi-action-include">Incluir</button>
 		<table id="comparacoes-list"/>
 	<dd>
-</dl -->
+</dl>
 <footer>
 	<button class="coi-action-cancel">Cancelar</button>
 	<button class="coi-action-confirm">Confirmar</button>
 </footer>
 	</script>
-	<script type="text/template" id="exame_pre_menopausa_template">
+	<script type="text/template" id="exame_pos_menopausa_template">
 <dl class="coi-form-item">
 	<dt>Exame:</dt>
 	<dd>
@@ -503,7 +530,7 @@
 	<dd>
 </dl>
 	</script>
-	<script type="text/template" id="exame_pos_menopausa_template">
+	<script type="text/template" id="exame_pre_menopausa_template">
 <dl class="coi-form-item">
 	<dt>Exame:</dt>
 	<dd>
